feat: match notification rules with wildcard patterns
Replace regular-expression matching with a small bounded wildcard matcher.
Patterns use the * wildcard, match case-insensitively, and match anywhere in
the message. The matcher is a greedy two-pointer scan (O(pattern x text), no
exponential backtracking), so a user-authored pattern cannot hang the client
thread, and it adds no third-party dependency. Legacy regex config is
converted to wildcards where the translation is unambiguous, and imported
disabled with a note otherwise.